# agent-display

./: Cargo.toml  README.md
mcp/: agent_display_mcp.py
scripts/: install-systemd-service.sh
server/: Cargo.toml
server/src/: main.rs
systemd/: llm-viewer-server.service
viewer/: Cargo.toml
viewer/src/: main.rs
