[package]
name = "llm-viewer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive", "env"] }
rcgen = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
