[package]
name = "llm-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.34"
egui = "0.34"
egui_commonmark = "0.23"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
